# r510_fan_control

./: .gitignore  README.md  pyproject.toml  r510_fan_control.py
.github/workflows/: main.yml
tests/: test_r510_fan_control.py
