[tool.poetry]
name = "r510-fan-control"
version = "0.1.0"
description = "Simple fan control daemon for Dell Poweredge r510"
authors = ["John Cant <a.johncant@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-subprocess = "^1.5.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
